--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ defusedxml==0.4.1
 Django==1.8.2
 django-allauth==0.21.0
 django-crispy-forms==1.4.0
+django-datetime-widget==0.9.3
 django-haystack==2.4.0
 django-postgrespool==0.3.0
 django-summernote==0.6.8
@@ -10,6 +11,7 @@ oauthlib==0.7.2
 Pillow==2.9.0
 psycopg2==2.6.1
 python3-openid==3.0.5
+pytz==2015.4
 requests==2.7.0
 requests-oauthlib==0.5.0
 static3==0.6.1
