--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,29 @@
+decorator==4.0.2
 defusedxml==0.4.1
 Django==1.8.2
 django-allauth==0.21.0
 django-crispy-forms==1.4.0
 django-datetime-widget==0.9.3
+django-gfklookupwidget==1.0.3
 django-haystack==2.4.0
 django-postgrespool==0.3.0
 django-summernote==0.6.8
 elasticsearch==1.6.0
+ipdb==0.8.1
+ipython==4.0.0
+ipython-genutils==0.1.0
 oauthlib==0.7.2
-Pillow==2.9.0
+path.py==7.6
+pexpect==3.3
+pickleshare==0.5
+Pillow==2.4.0
 psycopg2==2.6.1
 python3-openid==3.0.5
 pytz==2015.4
 requests==2.7.0
 requests-oauthlib==0.5.0
+simplegeneric==0.8.1
 static3==0.6.1
+traitlets==4.0.0
 urllib3==1.11
 wheel==0.24.0
