--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.4.1
 decorator==4.0.2
 defusedxml==0.4.1
 Django==1.8.2
@@ -27,3 +28,4 @@ static3==0.6.1
 traitlets==4.0.0
 urllib3==1.11
 wheel==0.24.0
+workdays==1.4
