--- a/requirements-basic.txt
+++ b/requirements-basic.txt
@@ -17,7 +17,7 @@ oauthlib==0.7.2
 path.py==7.6
 #pexpect==3.3
 pickleshare==0.5
-Pillow==2.4.0
+#Pillow==2.4.0
 #psycopg2==2.6.1
 python3-openid==3.0.5
 pytz==2015.4
