--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==1.8.2
 django-allauth==0.21.0
 django-crispy-forms==1.4.0
 django-datetime-widget==0.9.3
+django-djconfig==0.5.0
 django-grappelli==2.7.1
 django-haystack==2.4.0
 django-postgrespool==0.3.0
@@ -27,5 +28,4 @@ simplegeneric==0.8.1
 static3==0.6.1
 traitlets==4.0.0
 urllib3==1.11
-wheel==0.24.0
 workdays==1.4
