--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -5,7 +5,9 @@ Django==1.9.7
 django-allauth==0.25.2
 django-crispy-forms==1.6.0
 django-datetime-widget==0.9.3
+#django-debug-toolbar==1.4
 django-djconfig==0.5.0
+django-embed-video==1.1.0
 django-grappelli==2.8.1
 django-postgrespool==0.3.0
 django-summernote==0.8.5
@@ -25,6 +27,7 @@ requests==2.10.0
 requests-oauthlib==0.6.1
 #simplegeneric==0.8.1
 SQLAlchemy==1.0.14
+#sqlparse==0.1.19
 static3==0.7.0
 #traitlets==4.2.2
 workdays==1.4
