add basic caching

--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -3,9 +3,10 @@ beautifulsoup4==4.4.1
 defusedxml==0.4.1
 Django==1.9.7
 django-allauth==0.25.2
+django-cache-utils==0.7.2
 django-crispy-forms==1.6.0
 django-datetime-widget==0.9.3
-#django-debug-toolbar==1.4
+#django-debug-toolbar==1.6
 django-djconfig==0.5.0
 django-embed-video==1.1.0
 django-grappelli==2.8.1
@@ -21,13 +22,15 @@ Pillow==3.3.0
 #pipdeptree==0.6.0
 psycopg2==2.6.1
 #ptyprocess==0.5.1
+python-memcached==1.58
 python3-openid==3.0.10
 pytz==2016.4
 requests==2.10.0
 requests-oauthlib==0.6.1
 #simplegeneric==0.8.1
+six==1.10.0
 SQLAlchemy==1.0.14
-#sqlparse==0.1.19
+#sqlparse==0.2.2
 static3==0.7.0
 #traitlets==4.2.2
 workdays==1.4
