Fix development installation process

--- a/requirements-basic.txt
+++ b/requirements-basic.txt
@@ -1,15 +1,17 @@
 beautifulsoup4==4.4.1
 #decorator==4.0.10
 defusedxml==0.4.1
-Django==1.11.2
+Django==1.9.7
 django-allauth==0.25.2
 django-crispy-forms==1.6.0
 django-datetime-widget==0.9.3
-#django-debug-toolbar==1.4
+django-debug-toolbar==1.8
+django-debug-toolbar-template-timings==0.7
 django-djconfig==0.5.0
-django-embed-video==1.1.0
+django-embed-video==1.1.2
 django-grappelli==2.8.1
 #django-postgrespool==0.3.0
+django-select2==5.10.0
 django-summernote==0.8.5
 #ipdb==0.10.1
 #ipython==4.2.1
@@ -21,6 +23,7 @@ Pillow==3.3.0
 #pipdeptree==0.6.0
 #psycopg2==2.6.1
 #ptyprocess==0.5.1
+python-memcached==1.58
 python3-openid==3.0.10
 pytz==2016.4
 requests==2.10.0
