--- a/requirements-basic.txt
+++ b/requirements-basic.txt
@@ -1,36 +1,33 @@
-beautifulsoup4==4.4.1
-#decorator==4.0.10
-defusedxml==0.4.1
-Django==1.9.7
-django-allauth==0.25.2
-django-crispy-forms==1.6.0
+appdirs==1.4.3
+beautifulsoup4==4.6.0
+certifi==2017.4.17
+chardet==3.0.3
+defusedxml==0.5.0
+Django==1.11.1
+django-allauth==0.32.0
+django-appconf==1.0.2
+django-crispy-forms==1.6.1
 django-datetime-widget==0.9.3
 django-debug-toolbar==1.8
 django-debug-toolbar-template-timings==0.7
-django-djconfig==0.5.0
+django-djconfig==0.5.3
 django-embed-video==1.1.2
-django-grappelli==2.8.1
-#django-postgrespool==0.3.0
-django-select2==5.10.0
-django-summernote==0.8.5
-#ipdb==0.10.1
-#ipython==4.2.1
-#ipython-genutils==0.1.0
-oauthlib==1.1.2
-#pexpect==4.2.0
-#pickleshare==0.7.2
-Pillow==3.3.0
-#pipdeptree==0.6.0
-#psycopg2==2.6.1
-#ptyprocess==0.5.1
+django-grappelli==2.10.1
+Django-Select2==5.10.0
+django-summernote==0.8.7
+idna==2.5
+oauthlib==2.0.2
+olefile==0.44
+packaging==16.8
+Pillow==4.1.1
+pyparsing==2.2.0
 python-memcached==1.58
-python3-openid==3.0.10
-pytz==2016.4
-requests==2.10.0
-requests-oauthlib==0.6.1
-#simplegeneric==0.8.1
-#SQLAlchemy==1.0.14
-#sqlparse==0.1.19
+python3-openid==3.1.0
+pytz==2017.2
+requests==2.16.4
+requests-oauthlib==0.8.0
+six==1.10.0
+sqlparse==0.2.3
 static3==0.7.0
-#traitlets==4.2.2
+urllib3==1.21.1
 workdays==1.4
