--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,12 @@ olefile==0.44
 Pillow==4.1.1
 pipdeptree==0.10.1
 psycopg2==2.7.1
+python-memcached==1.58
 python3-openid==3.1.0
 pytz==2017.2
 requests==2.17.3
 requests-oauthlib==0.8.0
+six==1.10.0
 SQLAlchemy==1.1.10
 sqlparse==0.2.3
 urllib3==1.21.1
