--- a/requirements-top-production.txt
+++ b/requirements-top-production.txt
@@ -7,9 +7,11 @@ django-datetime-widget==0.9.3 # Requires `pip install setuptool` first?
 django-djconfig==0.5.3
 django-embed-video==1.1.2
 django-grappelli==2.10.1
+django-jchart==0.3.0
 django-postgrespool==0.3.1
 Django-Select2==5.10.0
 django-summernote==0.8.7
+numpy==1.13.0
 Pillow==4.1.1
 #pipdeptree==0.10.1
 python-memcached==1.58
