--- a/requirements-top.txt
+++ b/requirements-top.txt
@@ -6,10 +6,12 @@ django-debug-toolbar==1.8
 django-debug-toolbar-template-timings==0.7
 django-djconfig==0.5.3
 django-embed-video==1.1.2
+django-jchart==0.3.0
 django-grappelli==2.10.1
 django-postgrespool==0.3.1
 Django-Select2==5.10.0
 django-summernote==0.8.7
+numpy==1.13.0
 Pillow==4.1.1
 pipdeptree==0.10.1
 python-memcached==1.58
