--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ beautifulsoup4==4.6.0
 certifi==2017.4.17
 chardet==3.0.3
 defusedxml==0.5.0
-Django==1.11.2
+Django==1.11.3
 django-allauth==0.32.0
 django-appconf==1.0.2
 django-crispy-forms==1.6.1
@@ -12,10 +12,12 @@ django-debug-toolbar-template-timings==0.7
 django-djconfig==0.5.3
 django-embed-video==1.1.2
 django-grappelli==2.10.1
+django-jchart==0.4.1
 django-postgrespool==0.3.1
 Django-Select2==5.10.0
 django-summernote==0.8.7
 idna==2.5
+numpy==1.13.0
 oauthlib==2.0.2
 olefile==0.44
 Pillow==4.1.1
