--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 beautifulsoup4==4.6.0
 certifi==2017.4.17
 chardet==3.0.3
@@ -17,6 +16,7 @@ django-jchart==0.4.1
 django-postgrespool==0.3.1
 Django-Select2==5.10.0
 django-summernote==0.8.8.2
+django-url-or-relative-url-field==0.1.1
 idna==2.5
 numpy==1.13.0
 oauthlib==2.0.2
