--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pipdeptree==0.13.1
 psycopg2==2.7.1
 python-memcached==1.58
 python3-openid==3.1.0
+pytidylib==0.3.2
 pytz==2017.2
 PyYAML==3.13
 requests==2.21.0
