--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,7 @@
-backports.csv==1.0.7
-beautifulsoup4==4.6.0
-certifi==2017.4.17
-chardet==3.0.3
+-r requirements-production.txt
 coverage==4.5.2
-defusedxml==0.5.0
-diff-match-patch==20181111
-Django==2.0.13
-django-allauth==0.32.0
-django-appconf==1.0.2
-django-bootstrap-datepicker-plus==3.0.5
-django-crispy-forms==1.7.2
-django-datetime-widget==0.9.3
 django-debug-toolbar==1.11
 django-debug-toolbar-template-timings==0.9
-django-djconfig==0.5.3
-django-embed-video==1.1.2
-django-grappelli==2.10.1
-django-import-export==1.2.0
-django-jchart==0.4.2
-django-postgrespool==0.3.1
-django-select2==6.3.1
-django-summernote==0.8.8.6
-django-url-or-relative-url-field==0.1.1
-et-xmlfile==1.0.1
-idna==2.5
-jdcal==1.4
 model-mommy==1.6.0
-numpy==1.13.0
-oauthlib==2.0.2
-odfpy==1.4.0
-olefile==0.44
-openpyxl==2.6.1
-Pillow==4.1.1
 pipdeptree==0.13.1
-psycopg2==2.7.1
-python-memcached==1.58
-python3-openid==3.1.0
-pytz==2017.2
-PyYAML==5.1
-requests==2.21.0
-requests-oauthlib==0.8.0
-six==1.10.0
-SQLAlchemy==1.3.3
 sqlparse==0.2.3
-tablib==0.13.0
-urllib3==1.24.2
-workdays==1.4
-xlrd==1.2.0
-xlwt==1.3.0
