Added tests for QuestManager

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@
 coverage==4.5.2
 django-debug-toolbar==1.11
 django-debug-toolbar-template-timings==0.9
+ipdb==0.12
 model-mommy==1.6.0
 pipdeptree==0.13.1
 sqlparse==0.2.3
 freezegun==0.3.11
+mock==2.0.0
