--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -1,6 +1,7 @@
 backports.csv==1.0.7
 beautifulsoup4==4.6.0
 certifi==2017.4.17
+celery==4.3.0
 chardet==3.0.3
 defusedxml==0.5.0
 diff-match-patch==20181111
@@ -8,6 +9,7 @@ Django==2.0.13
 django-allauth==0.32.0
 django-appconf==1.0.2
 django-bootstrap-datepicker-plus==3.0.5
+django-celery-results-1.1.2
 django-crispy-forms==1.7.2
 django-datetime-widget==0.9.3
 django-djconfig==0.5.3
@@ -16,6 +18,7 @@ django-grappelli==2.10.1
 django-import-export==1.2.0
 django-jchart==0.4.2
 django-postgrespool==0.3.1
+django-redis==4.10.0
 django-select2==6.3.1
 django-summernote==0.8.8.6
 django-url-or-relative-url-field==0.1.1
@@ -35,6 +38,7 @@ pytz==2017.3
 PyYAML==5.1
 requests==2.21.0
 requests-oauthlib==0.8.0
+redis==3.2.1
 six==1.10.0
 SQLAlchemy==1.3.3
 tablib==0.13.0
