--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -16,7 +16,7 @@ django-embed-video==1.1.2
 django-grappelli==2.10.1
 django-import-export==1.2.0
 django-jchart==0.4.2
-django-postgrespool==0.3.1
+#django-postgrespool==0.3.1
 django-redis==4.10.0
 django-select2==6.3.1
 django-summernote==0.8.8.6
@@ -30,7 +30,7 @@ odfpy==1.4.0
 olefile==0.44
 openpyxl==2.6.1
 Pillow==4.1.1
-psycopg2==2.7.1
+psycopg2-binary==2.8.3
 python-memcached==1.58
 python3-openid==3.1.0
 pytz==2017.3
