--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,32 @@
-version: '3.7'
+version: '3'
 
 services:
+  db:
+    image: postgres:11-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+  redis:
+    image: "redis:alpine"
   web:
     build: . # current directory
-    command: python /app/src/manage.py runserver 0.0.0.0:8000
+    command: bash -c "python /app/src/manage.py migrate && 
+                      python /app/src/manage.py runserver 0.0.0.0:8000"
     volumes: 
       - .:/app
     ports:
       - "8000:8000"
-#     depends_on:
-#       - db    
-  
-#   db:
-#     image: postgres:11-alpine
-#     volumes:
-#       - postgres_data:/var/lib/postgresql/data/
+    depends_on:
+      - db
+      - redis
+  celery:
+    build: .
+    command: celery -A /app/src/hackerspace_online worker -l info -c 3 -Q default
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+      - redis
 
-# volumes:
-#   postgres_data:
+volumes:
+  postgres_data:
   
