--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,20 @@
 version: '3'
 
 services:
-  db:
-    image: postgres:11-alpine
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
+  # db:
+  #   image: postgres:11-alpine
+  #   volumes:
+  #     - postgres_data:/var/lib/postgresql/data/
   redis:
     image: "redis:alpine"
+    # env_file: .env
+    # ports:
+    # - ${REDIS_PORT}:6379
+    # volumes:
+    # - redis_data:/data
   web:
     build: . # current directory
+    env_file: .env
     command: bash -c "python /app/src/manage.py migrate && 
                       python /app/src/manage.py runserver 0.0.0.0:8000"
     volumes: 
@@ -16,17 +22,20 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      # - db
       - redis
-  celery:
-    build: .
-    command: celery -A /app/src/hackerspace_online worker -l info -c 3 -Q default
-    volumes:
-      - .:/app
-    depends_on:
-      - db
-      - redis
+  # celery:
+  #   build: .
+  #   env_file: .env
+  #   command: celery -A hackerspace_online worker -l info -c 3 -Q default
+  #   volumes:
+  #     - .:/app
+  #   depends_on:
+  #     - db
+  #     - redis
 
-volumes:
-  postgres_data:
+# volumes:
+#   postgres_data:
+#   redis_data:
   
+# Does this transfer to the non-containered code?
