--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Environment variables for docker compose
 # https://docs.docker.com/compose/environment-variables/
 
-# REDIS_HOST='0.0.0.0'
+REDIS_HOST=redis
 # REDIS_PORT=6380
