--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,11 @@ services:
   #     - postgres_data:/var/lib/postgresql/data/
   redis:
     image: "redis:alpine"
-    # env_file: .env
     # ports:
     # - ${REDIS_PORT}:6379
   web:
     build: . # current directory
-    #env_file: .env
-    environment: 
-      - REDIS_HOST=redis
+    env_file: .env
     command: bash -c "python /app/src/manage.py migrate && 
                       python /app/src/manage.py runserver 0.0.0.0:8000"
     volumes: 
@@ -26,9 +23,8 @@ services:
       - redis
   celery:
     build: .
-    environment: 
-      - REDIS_HOST=redis
-    command: bash -c "cd src && 
+    env_file: .env
+    command: bash -c "cd src &&
                       celery -A hackerspace_online worker -l info -c 3 -Q default"
     volumes:
       - .:/app
