--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -2,6 +2,6 @@
 {
 	"dockerComposeFile": "docker-compose.yml",
 	"service": "web",
-	"workspaceFolder": "/",
+	"workspaceFolder": "/app/",
 	"extensions": []
 }
