--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '3'
+version: '2' # supported by default isntall on Ubuntu 18.04
 
 services:
   db:
-    image: postgres:11-alpine
+    image: postgres:9.5-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
   redis:
