--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,14 @@ services:
     image: postgres:9.5-alpine # Production server is using 9.5.17
     expose:
       - "5432"
+    ports:
+      - 5432:5432
     volumes:
       - postgres_data:/var/lib/postgresql/data/
   redis:
     image: "redis:5.0-alpine" # Production server is using 3.0.6
-    # ports:
-    # - ${REDIS_PORT}:6379
+    ports:
+    - 6379:6379
   web:
     #restart: unless-stopped
     build: . # current directory
@@ -28,8 +30,10 @@ services:
   celery:
     build: .
     env_file: .env
+    # run both workers and beat (with "-B" development environment only per celery docs)
+    # https://django-celery-beat.readthedocs.io/en/latest/
     command: bash -c "cd src &&
-                      celery -A hackerspace_online worker -l info -c 3 -Q default"
+                      celery -A hackerspace_online worker -l info -c 3 -Q default --beat --scheduler django --loglevel=info"
     volumes:
       - .:/app
     depends_on:
