--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2' # supported by default isntall on Ubuntu 18.04
+version: '2' # supported by default install on Ubuntu 18.04
 
 services:
   db:
@@ -6,14 +6,14 @@ services:
     env_file: .env
     expose:
       - "5432"
-    # ports:
-    #   - 5432:5432
+    ports:
+      - 5432:5432
     volumes:
       - postgres_data:/var/lib/postgresql/data/
   redis:
     image: "redis:5.0-alpine" # Production server is using 3.0.6
-    # ports:
-    # - 6379:6379
+    ports:
+    - 6379:6379
   web:
     #restart: unless-stopped
     build: . # current directory
@@ -31,7 +31,8 @@ services:
     build: .
     env_file: .env
     command: bash -c "cd src &&
-                      celery -A hackerspace_online worker -l info -c 3 -Q default"
+                      python manage.py migrate &&
+                      celery -A hackerspace_online worker -l info -c 3"
     volumes:
       - .:/app
     depends_on:
@@ -40,16 +41,15 @@ services:
     build: .
     env_file: .env
     command: bash -c "cd src &&
+                      python manage.py migrate && 
                       celery -A hackerspace_online beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler"
     volumes:
       - .:/app
     depends_on:
       - db 
       - redis
-      - web # needs the django-celery-beat migrations into db
 
 volumes:
   postgres_data:
   redis_data:
-  
-# Does this transfer to the non-containered code?
+
