--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
   db:
     image: postgres:9.5-alpine # Production server is using 9.5.17
     env_file: .env
-    expose:
-      - "5432"
-    # ports:
-    #   - 5432:5432
+    # expose:
+    #   - "5432"
+    ports:
+      - 5432:5432
     volumes:
       - postgres_data:/var/lib/postgresql/data/
   redis:
     image: "redis:5.0-alpine" # Production server is using 3.0.6
-    # ports:
-    # - 6379:6379
+    ports:
+    - 6379:6379
   web:
     #restart: unless-stopped
     build: . # current directory
