split docker-compose settings for travisci; fix broken test; email to a file

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 #these files have might have production keys and passwords etc.
 production_*.py
 
+sentmail/
+
 #to fill this directory if needed run:
 # python manage.py collectstatic
 static_in_venv/
