--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -18,6 +18,7 @@ django-grappelli==2.10.1
 django-import-export==1.2.0
 django-jchart==0.4.2
 #django-postgrespool==0.3.1
+django-postman==3.6.2
 django-redis==4.10.0
 django-select2==6.3.1
 django-summernote==0.8.8.6
