--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -10,6 +10,7 @@ django-allauth==0.32.0
 django-appconf==1.0.2
 django-bootstrap-datepicker-plus==3.0.5
 django-celery-beat==1.5.0
+django-colorful==1.3
 django-crispy-forms==1.7.2
 django-datetime-widget==0.9.3
 django-djconfig==0.5.3
