postman with django-attachments almost there!

--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -8,6 +8,7 @@ diff-match-patch==20181111
 Django==2.0.13
 django-allauth==0.32.0
 django-appconf==1.0.2
+django-attachments==1.4.1
 django-bootstrap-datepicker-plus==3.0.5
 django-celery-beat==1.5.0
 django-colorful==1.3
