--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -13,6 +13,9 @@ django-djconfig>=0.10.0,<0.11
 django-embed-video>=1.1.2,<1.2
 django-grappelli>=2.10.1,<2.11
 django-import-export>=1.2.0,<1.3
+#freeze tablib to 0.14.0 until django-import-export fixes its own dependancies
+# https://github.com/django-import-export/django-import-export/issues/1064
+tablib==0.14.0
 django-jchart>=0.4.2,<0.5
 django-postman>=3.6.2,<3.7
 django-redis>=4.10.0,<4.11
