attempt fix travis failure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,23 +12,23 @@ services:
   redis:
     image: "redis:5.0-alpine" # Production server is using 3.0.6
     ports:
-    - 6379:6379
+      - 6379:6379
   web:
     #restart: unless-stopped
     build: . # current directory
-    env_file: .env
+    # env_file: .env
     command: bash -c "python /app/src/manage.py migrate && 
                       python /app/src/manage.py runserver 0.0.0.0:8000"
     volumes: 
       - .:/app
     ports:
-      - "8000:8000"
+      - 8000:8000
     depends_on:
       - db
       - redis
   celery:
     build: .
-    env_file: .env
+    # env_file: .env
     command: bash -c "cd src &&
                       python manage.py migrate &&
                       celery -A hackerspace_online worker -l info -c 3 -Q default"
@@ -38,7 +38,7 @@ services:
       - redis
   celery-beat:
     build: .
-    env_file: .env
+    # env_file: .env
     command: bash -c "cd src &&
                       python manage.py migrate && 
                       celery -A hackerspace_online beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler"
