--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -24,7 +24,7 @@ django-summernote>=0.8.11.6,<0.9
 django-url-or-relative-url-field>=0.1.1,<0.2
 numpy>=1.18.0,<1.19
 Pillow>=6.2.0,<6.3
-psycopg2-binary>=2.8.3,<2.9
+psycopg2-binary==2.8.3
 python-memcached>=1.58,<2.0
 #SQLAlchemy==1.3.3
 workdays>=1.4,<2.0
