--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     build: .
     env_file: .env
     command: bash -c "cd src &&
-                      python manage.py migrate_schems &&
+                      python manage.py migrate_schemas --shared &&
                       celery -A hackerspace_online worker -l info -c 3 -Q default"
     volumes:
       - .:/app
@@ -45,7 +45,7 @@ services:
     build: .
     env_file: .env
     command: bash -c "cd src &&
-                      python manage.py migrate_schemas && 
+                      python manage.py migrate_schemas --shared && 
                       celery -A hackerspace_online beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler"
     volumes:
       - .:/app
