--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,10 @@ services:
     #restart: unless-stopped
     build: .
     env_file: .env
-    command: bash -c "python /app/src/manage.py migrate_schemas --shared && 
-                      python /app/src/manage.py runserver 0.0.0.0:8000"
+    command: bash -c "cd /app/src/ &&
+                      python manage.py collectstatic --noinput &&
+                      python manage.py migrate_schemas --shared &&
+                      uwsgi --socket 0.0.0.0:8000 --wsgi-file hackerspace_online/wsgi.py --master --processes 4 --threads 2"
     volumes: 
       - .:/app
     ports:
