add health checks to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2' # supported by default install on Ubuntu 18.04
+version: '2.2' # supported by default install on Ubuntu 18.04
 
 services:
   db:
@@ -12,10 +12,20 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     environment:
       POSTGRES_HOST_AUTH_METHOD: "trust"  # http://support.divio.com/en/articles/3719228-database-is-uninitialized-and-superuser-password-is-not-specified
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
   redis:
-    image: "redis:5.0-alpine" # Production server is using 3.0.6
+    image: "redis:5.0-alpine"
     ports:
       - 6379:6379
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 1s
+      timeout: 3s
+      retries: 30
   web:
     #restart: unless-stopped
     build: .
@@ -29,8 +39,10 @@ services:
     ports:
       - 8000:8000
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     links: 
       - db:db
     user: $WUID:$WGID
@@ -42,8 +54,10 @@ services:
     volumes:
       - .:/app
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
   celery-beat:
     build: .
     env_file: .env
@@ -52,9 +66,10 @@ services:
     volumes:
       - .:/app
     depends_on:
-      - db 
-      - redis
-
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
 volumes:
   postgres_data:
   redis_data:
