move web user to docker-compose.production; disable auto publish of announcements

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -20,3 +20,4 @@ services:
       - .:/app
       - /var/www/bytedeck/media/:/app/media
       - /var/www/bytedeck/static/:/app/static
+    user: $WUID:$WGID
