--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,5 +13,17 @@ version: '2.2' # supported by default install on Ubuntu 18.04
 services:
   web:
     command: bash -c "cd /app/src/ &&
-                      python manage.py migrate_schemas --shared &&
+                      python manage.py migrate_schemas --shared &&  
+                      python manage.py migrate_schemas && 
                       python manage.py runserver 0.0.0.0:8000"   # no need for uwsgi in development, this is easier
+
+  db-admin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: password
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - "8080:80"
