--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ before_script: pip install docker-compose
 
 script: 
  - docker-compose -f docker-compose.yml run web sh -c "python src/manage.py test src && flake8 src"
+
+after_success:
+- coveralls --base_dir src
