migrate tests to model_bakery; closes 305

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ coverage>=5.0.1
 django-debug-toolbar>=2.1
 django-debug-toolbar-template-timings>=0.9
 ipdb>=0.12
-model-mommy>=2.0,<3.0
+model_bakery>=1.1,<2.0
 pipdeptree>=0.13.2
 freezegun>=0.3.12
 mock>=2.0,<3.0
