--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -14,7 +14,7 @@ services:
   web:
     command: bash -c "cd /app/src/ &&
                       python manage.py migrate_schemas --shared &&  
-                      python manage.py migrate_schemas && 
+                      python manage.py migrate_schemas --executor=parallel && 
                       python manage.py runserver 0.0.0.0:8000"   # no need for uwsgi in development, this is easier
 
   pg-admin:
