--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -16,7 +16,7 @@ services:
                       python manage.py migrate_schemas --shared &&
                       python manage.py migrate_schemas --executor=parallel && 
                       python manage.py collectstatic --noinput &&
-                      uwsgi --socket 0.0.0.0:8000 --wsgi-file hackerspace_online/wsgi.py --master --processes 4 --threads 2"
+                      uwsgi --ini uwsgi.ini"
     volumes: 
       - .:/app
       - /var/www/bytedeck/media/:/app/media
