--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,9 @@ services:
       retries: 5
   redis:
     image: "redis:5.0-alpine"
+    sysctls:
+      # Resolve -> # WARNING: The TCP backlog setting of 511 cannot be enforced because /proc/sys/net/core/somaxconn is set to the lower value of 128.
+      net.core.somaxconn: 512
     ports:
       - 6379:6379
     healthcheck:
