hotfix: uwsgi problems introduced?

--- a/src/uwsgi.ini
+++ b/src/uwsgi.ini
@@ -48,7 +48,7 @@ harakiri        = 60            ; Forcefully kill workers after 60 seconds
 
 # This setting is causing errors: https://github.com/unbit/uwsgi/issues/1978
 # https://stackoverflow.com/questions/62250160/uwsgi-runtimeerror-cannot-release-un-acquired-lock
-#py-call-osafterfork = true      ; Allow workers to receive signals such as signal.alarm
+py-call-osafterfork = true      ; Allow workers to receive signals such as signal.alarm
 
 auto-procname   = true          ; Provide more usefull name to workers
 procname-prefix = "h10 "
