--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,10 @@ version: '2.2' # supported by default install on Ubuntu 18.04
 ################################################################################
 
 services:
+  redis: 
+    env_file: .env.production
   web:
+    env_file: .env.production
     command: bash -c "cd /app/src/ &&
                       python manage.py migrate_schemas --shared &&
                       python manage.py migrate_schemas --executor=parallel && 
@@ -22,3 +25,7 @@ services:
       - /var/www/bytedeck/media/:/app/media
       - /var/www/bytedeck/static/:/app/static
     user: $WUID:$WGID
+  celery:
+    env_file: .env.production
+  celery-beat:
+    env_file: .env.production
