--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2.2' # supported by default install on Ubuntu 18.04
+version: '2.4'
 
 ###############################################################################
 #
