--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -11,6 +11,9 @@ version: '2.4'
 ################################################################################
 
 services:
+  db:
+    ports:
+    - 5432:5432  # Expose port so app can connect to db when developing locally with ./src/manage.py runserver
   web:
     command: bash -c "cd /app/src/ &&
                       python manage.py migrate_schemas --shared &&  
