move db env variable into docker-compose for web container

--- a/.env
+++ b/.env
@@ -9,24 +9,14 @@ REDIS_PORT=6379
 
 
 ## POSTGRES ############################################
-# 
-#   The celery-beat service, needs POSTGRES_HOST=db in order to communicate with the db
-#   So this is set in docker-compose.yml for celery-beat service which takes precendent over 
-#   this file.
-#   
-#   The web service needs POSTGRES_HOST=db for the same reason.  But if we want to develop locally
-#   then we need to set POSTGRES_HOST=127.0.0.1.
-#   Change the value here based on how you want to develop.
-#
-########################################################
 
-# Local development with `./src/manage.py runserver`
-#POSTGRES_HOST=127.0.0.1 
-# Developing in container with `docker-compose up web`
-POSTGRES_HOST=db  
+# Only used for local development with `./src/manage.py runserver`
+# When running web service in a container with `docker-compose up web`
+#  the app will read POSTGRES_HOST=db from docker-compose.yml
+#  similarly with the celery-beat service
+POSTGRES_HOST=127.0.0.1 
 
 POSTGRES_HOST_AUTH_METHOD=trust
-
 POSTGRES_DB_NAME=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=
