add django-environ WIP

--- a/.env
+++ b/.env
@@ -2,6 +2,12 @@
 # https://docs.docker.com/compose/environment-variables/
 #
 
+SECRET_KEY=Change.Me!
+
+DEBUG=True
+
+ALLOWED_HOSTS=*
+
 ## REDIS ###############################################
 
 REDIS_HOST=redis
@@ -14,9 +20,9 @@ REDIS_PORT=6379
 # When running web service in a container with `docker-compose up web`
 #  the app will read POSTGRES_HOST=db from docker-compose.yml
 #  similarly with the celery-beat service
-POSTGRES_HOST=127.0.0.1 
+POSTGRES_HOST=127.0.0.1
 
 POSTGRES_HOST_AUTH_METHOD=trust
 POSTGRES_DB_NAME=postgres
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=
+#POSTGRES_PASSWORD=
