--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-# 
 # https://docs.docker.com/compose/environment-variables/
-#
+# https://django-environ.readthedocs.io/en/latest/#django-environ
 
 SECRET_KEY=Change.Me!
 
 DEBUG=True
 
-ALLOWED_HOSTS=*
+# Comma seperated list
+ALLOWED_HOSTS=localhost,.localhost
 
 ## REDIS ###############################################
 
@@ -22,7 +22,16 @@ REDIS_PORT=6379
 #  similarly with the celery-beat service
 POSTGRES_HOST=127.0.0.1
 
-POSTGRES_HOST_AUTH_METHOD=trust
+POSTGRES_PORT=5432
 POSTGRES_DB_NAME=postgres
 POSTGRES_USER=postgres
-#POSTGRES_PASSWORD=
+POSTGRES_PASSWORD=hellonepal
+
+# http://support.divio.com/en/articles/3719228-database-is-uninitialized-and-superuser-password-is-not-specified
+POSTGRES_HOST_AUTH_METHOD=trust
+
+
+## TENANTS ##############################################
+
+TENANT_DEFAULT_SUPERUSER_USERNAME=admin
+TENANT_DEFAULT_SUPERUSER_PASSWORD=password
