Clean up media and static files

--- a/.env
+++ b/.env
@@ -8,9 +8,19 @@ DEBUG=True
 # Comma seperated list
 ALLOWED_HOSTS=localhost,.localhost
 
+## MEDIA AND STATIC FILES ##############################
+
+#MEDIA_ROOT=
+#STATIC_ROOT=
+
 ## REDIS ###############################################
 
-REDIS_HOST=redis
+# Only used for local development with `./src/manage.py runserver`
+# When running web service in a container with `docker-compose up web`
+#  the app will read REDIS_HOST=redis from docker-compose.yml
+#  similarly with the celery services
+REDIS_HOST=127.0.0.1
+
 REDIS_PORT=6379
 
 
