--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
     env_file: .env
     environment:
       POSTGRES_HOST: db  # takes precendent over .env file
+      REDIS_HOST: redis  # takes precendent over .env file
     # command: # see docker-compose.overide.yml or docker-compose.prod.yml
     volumes: 
       - .:/app
