static files dirs moved to .env

--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ ALLOWED_HOSTS=localhost,.localhost
 
 #MEDIA_ROOT=
 #STATIC_ROOT=
+#STATICFILES_DIRS=('/var/www/static/', 'etc',)
 
 ## REDIS ###############################################
 
