--- a/.env
+++ b/.env
@@ -8,6 +8,25 @@ DEBUG=True
 # Comma seperated list
 ALLOWED_HOSTS=localhost,.localhost
 
+
+## EMAIL ######################################
+
+#EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+#EMAIL_FILE_PATH
+
+#EMAIL_HOST=
+#EMAIL_HOST_USER=
+#EMAIL_HOST_PASSWORD=
+
+EMAIL_PORT=587
+EMAIL_USE_TLS=True
+
+#DEFAULT_FROM_EMAIL=
+
+# SERVER ERRORS EMAIL
+ADMINS=Admin Name:admin@exmaple.com,Admin2 Name:admin2@exmaple.com
+#SERVER_EMAIL=server@example.com
+
 ## MEDIA AND STATIC FILES ##############################
 
 #MEDIA_ROOT=
