create env.example and update readme

--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ POSTGRES_HOST=127.0.0.1
 POSTGRES_PORT=5432
 POSTGRES_DB_NAME=postgres
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=hellonepal
+POSTGRES_PASSWORD=Change.Me!
 
 # http://support.divio.com/en/articles/3719228-database-is-uninitialized-and-superuser-password-is-not-specified
 POSTGRES_HOST_AUTH_METHOD=trust
