--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -13,7 +13,10 @@ version: '2.4'
 services:
   db:
     ports:
-    - 5432:5432  # Expose port so app can connect to db when developing locally with ./src/manage.py runserver
+    - 5432:5432  # Expose port so app can connect to db when developing locally with `./src/manage.py [runserver|test src]
+  redis:
+    ports:
+    - 6379:6379  # Expose port so app can connect to redis when developing locally with `./src/manage.py [runserver|test src]
   web:
     command: bash -c "cd /app/src/ &&
                       python manage.py migrate_schemas --shared &&  
