--- a/requirements-production.txt
+++ b/requirements-production.txt
@@ -20,6 +20,7 @@ django-redis>=4.10.0,<4.11
 django-select2>=6.3.1,<6.4
 django-summernote>=0.8.11.6,<0.9
 django-url-or-relative-url-field>=0.1.1,<0.2
+django-resized==0.3.11
 numpy>=1.18.0,<1.19
 Pillow>=7.2.0,<7.3
 psycopg2-binary==2.8.3
