working google reCaptcha on new tenant form

--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,9 @@ POSTGRES_HOST_AUTH_METHOD=trust
 
 TENANT_DEFAULT_SUPERUSER_USERNAME=admin
 TENANT_DEFAULT_SUPERUSER_PASSWORD=password
+
+
+# RECAPTCHA #######################################################
+
+#RECAPTCHA_PUBLIC_KEY=
+#RECAPTCHA_PRIVATE_KEY=
