Replace `init_public_schema.sh`

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ DEBUG=True
 # Comma seperated list
 ALLOWED_HOSTS=localhost,.localhost
 
+## SUPERUSER ######################################
+# Used to login to the public tenant admin
+DEFAULT_SUPERUSER_USERNAME=admin
+DEFAULT_SUPERUSER_PASSWORD=admin
+
 
 ## EMAIL ######################################
 
